--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -11,186 +11,187 @@
 
 <body class="page__body">
 
-	<form class="filter education__filter container">
-		<div class="filter__box">
-			<a class="back" href="/">
-				<svg class="back__icon" width="7" height="10" aria-hidden="true" focusable="false">
-					<use href="assets/images/svg/sprite.svg#arrow-left"></use>
-				</svg>
-				<span class="visually-hidden">
-					Вернуться на главную страницу
-				</span>
-			</a>
-			<nav class="breadcrumb" aria-label="Хлебные крошки">
-				<ol class="breadcrumb__list reset-list">
-					<li class="breadcrumb__item">
-						<a class="breadcrumb__link" href="/">
-							Главная
-						</a>
-					</li>
-					<li class="breadcrumb__item">
-						<span class="breadcrumb__link" aria-current="page">
-							Статьи
-						</span>
-					</li>
-				</ol>
-			</nav>
-		</div>
-		<h2 class="text education__title">
-			Навигация
-		</h2>
+	<form class="filter education__filter">
+		<div class="filter__container container">
+			<div class="filter__box">
+				<a class="back" href="/">
+					<svg class="back__icon" width="7" height="10" aria-hidden="true" focusable="false">
+						<use href="assets/images/svg/sprite.svg#arrow-left"></use>
+					</svg>
+					<span class="visually-hidden">
+						Вернуться на главную страницу
+					</span>
+				</a>
+				<nav class="breadcrumb" aria-label="Хлебные крошки">
+					<ol class="breadcrumb__list reset-list">
+						<li class="breadcrumb__item">
+							<a class="breadcrumb__link" href="/">
+								Главная
+							</a>
+						</li>
+						<li class="breadcrumb__item">
+							<span class="breadcrumb__link" aria-current="page">
+								Статьи
+							</span>
+						</li>
+					</ol>
+				</nav>
+			</div>
+			<h2 class="text education__title">
+				Навигация
+			</h2>
 
-		<div class="filter__inner">
-			<div class="filter__top-inner">
-				<div class="filter__top">
-					<label class="radio">
-						<input class="visually-hidden radio__input" type="radio" name="articles" value="indigo" checked>
-						<span class="radio__box">Образовательные статьи</span>
-					</label>
-					<label class="radio">
-						<input class="visually-hidden radio__input" type="radio" name="articles" value="indigo">
-						<span class="radio__box">Новостные статьи</span>
-					</label>
-				</div>
+			<div class="filter__inner">
+				<div class="filter__top-inner">
+					<div class="filter__top">
+						<label class="radio">
+							<input class="visually-hidden radio__input" type="radio" name="articles" value="indigo" checked>
+							<span class="radio__box">Образовательные статьи</span>
+						</label>
+						<label class="radio">
+							<input class="visually-hidden radio__input" type="radio" name="articles" value="indigo-2">
+							<span class="radio__box">Новостные статьи</span>
+						</label>
+					</div>
 
-				<div class="filter__all">
-					<label class="tag">
-						<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
-						<span class="tag__box">Altcoin</span>
-					</label>
-					<label class="tag">
-						<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
-						<span class="tag__box">Binance</span>
-					</label>
-					<label class="tag">
-						<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
-						<span class="tag__box">Биткоин</span>
-					</label>
-					<label class="tag">
-						<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
-						<span class="tag__box">Блокчейн</span>
-					</label>
-					<label class="tag">
-						<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
-						<span class="tag__box">Консенсус</span>
-					</label>
-					<label class="tag">
-						<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
-						<span class="tag__box">DeFi</span>
-					</label>
-					<label class="tag">
-						<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
-						<span class="tag__box">Технический анализ</span>
-					</label>
-					<label class="tag">
-						<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
-						<span class="tag__box">Еще+12</span>
-					</label>
-					<div class="filter__all-desktop">
+					<div class="filter__all">
 						<label class="tag">
-							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
-							<span class="tag__box">Технологии</span>
+							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo-3">
+							<span class="tag__box">Altcoin</span>
 						</label>
 						<label class="tag">
-							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
-							<span class="tag__box">Технический анализ</span>
+							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo-4">
+							<span class="tag__box">Binance</span>
 						</label>
 						<label class="tag">
-							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
-							<span class="tag__box">Криптография</span>
+							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo-5">
+							<span class="tag__box">Биткоин</span>
 						</label>
 						<label class="tag">
-							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
-							<span class="tag__box">Экономика</span>
+							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo-6">
+							<span class="tag__box">Блокчейн</span>
 						</label>
 						<label class="tag">
-							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
-							<span class="tag__box">Торговля</span>
-						</label>
-						<label class="tag">
-							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
-							<span class="tag__box">Ethereum</span>
-						</label>
-						<label class="tag">
-							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
-							<span class="tag__box">Приватность</span>
-						</label>
-						<label class="tag">
-							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
-							<span class="tag__box">Майнинг</span>
-						</label>
-						<label class="tag">
-							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
-							<span class="tag__box">Metaverse</span>
-						</label>
-						<label class="tag">
-							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
-							<span class="tag__box">История</span>
-						</label>
-						<label class="tag">
-							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
+							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo-7">
 							<span class="tag__box">Консенсус</span>
 						</label>
 						<label class="tag">
-							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
-							<span class="tag__box">Основы</span>
+							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo-8">
+							<span class="tag__box">DeFi</span>
 						</label>
+						<label class="tag">
+							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo-9">
+							<span class="tag__box">Технический анализ</span>
+						</label>
+						<label class="tag">
+							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo-10">
+							<span class="tag__box">Еще+12</span>
+						</label>
+						<div class="filter__all-desktop">
+							<label class="tag">
+								<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo-11">
+								<span class="tag__box">Технологии</span>
+							</label>
+							<label class="tag">
+								<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo-12">
+								<span class="tag__box">Технический анализ</span>
+							</label>
+							<label class="tag">
+								<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo-13">
+								<span class="tag__box">Криптография</span>
+							</label>
+							<label class="tag">
+								<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo-14">
+								<span class="tag__box">Экономика</span>
+							</label>
+							<label class="tag">
+								<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo-15">
+								<span class="tag__box">Торговля</span>
+							</label>
+							<label class="tag">
+								<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo-16">
+								<span class="tag__box">Ethereum</span>
+							</label>
+							<label class="tag">
+								<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo-17">
+								<span class="tag__box">Приватность</span>
+							</label>
+							<label class="tag">
+								<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo-18">
+								<span class="tag__box">Майнинг</span>
+							</label>
+							<label class="tag">
+								<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo-19">
+								<span class="tag__box">Metaverse</span>
+							</label>
+							<label class="tag">
+								<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo-20">
+								<span class="tag__box">История</span>
+							</label>
+							<label class="tag">
+								<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo-21">
+								<span class="tag__box">Консенсус</span>
+							</label>
+							<label class="tag">
+								<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo-22">
+								<span class="tag__box">Основы</span>
+							</label>
+						</div>
 					</div>
 				</div>
-			</div>
 
-			<div class="filter__level-inner">
-				<fieldset class="fieldset filter__level">
-					<legend class="text">
-						Уровень
-					</legend>
-					<div class="filter__level-wrap">
-						<label class="tag">
-							<input class="visually-hidden tag__input tag__input_level_beginner" type="checkbox" name="level"
-								value="indigo">
-							<span class="tag__box tag__box_level_beginner">Новичек</span>
-						</label>
+				<div class="filter__level-inner">
+					<fieldset class="fieldset filter__level">
+						<legend class="text">
+							Уровень
+						</legend>
+						<div class="filter__level-wrap">
+							<label class="tag">
+								<input class="visually-hidden tag__input tag__input_level_beginner" type="checkbox" name="level"
+									value="indigo">
+								<span class="tag__box tag__box_level_beginner">Новичек</span>
+							</label>
 
-						<label class="tag">
-							<input class="visually-hidden tag__input tag__input_level_advanced" type="checkbox" name="level"
-								value="indigo">
-							<span class="tag__box tag__box_level_advanced">Продвинутый</span>
-						</label>
+							<label class="tag">
+								<input class="visually-hidden tag__input tag__input_level_advanced" type="checkbox" name="level"
+									value="indigo">
+								<span class="tag__box tag__box_level_advanced">Продвинутый</span>
+							</label>
 
-						<label class="tag">
-							<input class="visually-hidden tag__input tag__input_level_professional" type="checkbox" name="level"
-								value="indigo">
-							<span class="tag__box tag__box_level_professional">Профессионал</span>
-						</label>
-					</div>
-				</fieldset>
-
-				<fieldset class="fieldset">
-					<legend class="text">
-						Время прочтения
-					</legend>
-					<div class="filter__time">
-						<div class="filter-range">
-							<div id="nonlinear" class="noUi-target noUi-ltr noUi-horizontal"></div>
-							<div class="filter__clock">
-								<span class="filter__clock_range_min"> 1m </span>
-								<span class="filter__clock_range_2m"> 3m </span>
-								<span class="filter__clock_range_3m"> 5m </span>
-								<span class="filter__clock_range_4m"> 10m </span>
-								<span class="filter__clock_range_5m"> 15m </span>
-								<span class="filter__clock_range_6m"> 20m </span>
-								<span class="filter__clock_range_max"> ∞ </span>
-							</div>
+							<label class="tag">
+								<input class="visually-hidden tag__input tag__input_level_professional" type="checkbox" name="level"
+									value="indigo">
+								<span class="tag__box tag__box_level_professional">Профессионал</span>
+							</label>
 						</div>
+					</fieldset>
 
-						<span id="slider-snap-value-lower"></span>
-						<span id="slider-snap-value-upper"></span>
-					</div>
-				</fieldset>
+					<fieldset class="fieldset">
+						<legend class="text">
+							Время прочтения
+						</legend>
+						<div class="filter__time">
+							<div class="filter-range">
+								<div id="nonlinear" class="noUi-target noUi-ltr noUi-horizontal"></div>
+								<div class="filter__clock">
+									<span class="filter__clock_range_min"> 1m </span>
+									<span class="filter__clock_range_2m"> 3m </span>
+									<span class="filter__clock_range_3m"> 5m </span>
+									<span class="filter__clock_range_4m"> 10m </span>
+									<span class="filter__clock_range_5m"> 15m </span>
+									<span class="filter__clock_range_6m"> 20m </span>
+									<span class="filter__clock_range_max"> ∞ </span>
+								</div>
+							</div>
+
+							<span id="slider-snap-value-lower"></span>
+							<span id="slider-snap-value-upper"></span>
+						</div>
+					</fieldset>
+				</div>
 			</div>
+			</а>
 		</div>
-		</а>
-	</form>
 
 	<div class="filter__bottom">
 		<div class="filter__bottom-inner container">
@@ -229,6 +230,7 @@
 			</button>
 		</div>
 	</div>
+	</form>
 
 	<!-- <section class="education container education-2">
 		<h2 class="text education__title education-2__title">
