--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body class="page__body">
-	<section class="hero">
-		<div class="container hero__container">
+	<section class="hero container">
+
 			<h1 class="title title_size_large hero__title">
 				Узнавайте больше о блокчейне с Bithoven Wiki
 			</h1>
@@ -53,7 +53,7 @@
 					Vote (1548)
 				</span>
 			</div>
-		</div>
+
 	</section>
 
 	<section class="slider">
