--- a/source/markup/article.html
+++ b/source/markup/article.html
@@ -15,49 +15,28 @@
 	<section class="content">
 		<div class="content__wrap container">
 			<div class="content__box">
-				<a
-					class="back"
-					href="/"
-				>
-					<svg
-						class="back__icon"
-						width="7"
-						height="10"
-						aria-hidden="true"
-						focusable="false"
-					>
+				<a class="back" href="/">
+					<svg class="back__icon" width="7" height="10" aria-hidden="true" focusable="false">
 						<use href="assets/images/svg/sprite.svg#arrow-left"></use>
 					</svg>
 					<span class="visually-hidden">
 						Вернуться на главную страницу
 					</span>
 				</a>
-				<nav
-					class="breadcrumb"
-					aria-label="Хлебные крошки"
-				>
+				<nav class="breadcrumb" aria-label="Хлебные крошки">
 					<ol class="breadcrumb__list reset-list">
 						<li class="breadcrumb__item">
-							<a
-								class="breadcrumb__link"
-								href="/"
-							>
+							<a class="breadcrumb__link" href="/">
 								Главная
 							</a>
 						</li>
 						<li class="breadcrumb__item">
-							<a
-								class="breadcrumb__link"
-								href="/"
-							>
+							<a class="breadcrumb__link" href="/">
 								Статьи
 							</a>
 						</li>
 						<li class="breadcrumb__item">
-							<span
-								class="breadcrumb__link"
-								aria-current="page"
-							>
+							<span class="breadcrumb__link" aria-current="page">
 								Что такое фан-токен ФК «Порту» (PORTO)?
 							</span>
 						</li>
@@ -416,69 +395,63 @@
 		</div>
 
 		<div class="interesting__content">
-			<div class="card">
-				<div class="card__top">
-					<p class="text card__text">
+			<div class="main-card">
+				<div class="main-card__info">
+					<p class="text text_size_small main-card__time">
 						12 минут
 					</p>
-
-					<a class="link link_level_new card__link_size_small card__level" href="">
+					<a class="link link_level_new" href="">
 						Новичок
 					</a>
 				</div>
-
 				<h2 class="title card__title">
-					<a class="link" href="">
+					<a class="link main-card__title-link" href="#">
 						Что такое BETH и как он работает?
 					</a>
 				</h2>
-
-				<a class="card__content card__content--eth">
-
+				<a class="link main-card__img-link" href="#">
+					<img class="main-card__img" src="https://picsum.photos/200/300" alt="Человек входит в метавселенную"
+						height="135">
 				</a>
 			</div>
 
-			<div class="card">
-				<div class="card__top">
-					<p class="text card__text">
+			<div class="main-card">
+				<div class="main-card__info">
+					<p class="text text_size_small main-card__time">
 						12 минут
 					</p>
-
-					<a class="link link_level_advanced card__link_size_small card__level" href="">
-						Продвинутый
+					<a class="link link_level_new" href="">
+						Новичок
 					</a>
 				</div>
-
 				<h2 class="title card__title">
-					<a class="link" href="">
-						Что такое Harmony (ONE)?
+					<a class="link main-card__title-link" href="#">
+						Что такое BETH и как он работает?
 					</a>
 				</h2>
-
-				<a class="card__content card__content--one">
-
+				<a class="link main-card__img-link" href="#">
+					<img class="main-card__img" src="https://picsum.photos/200/300" alt="Человек входит в метавселенную"
+						height="135">
 				</a>
 			</div>
 
-			<div class="card">
-				<div class="card__top">
-					<p class="text card__text">
+			<div class="main-card">
+				<div class="main-card__info">
+					<p class="text text_size_small main-card__time">
 						12 минут
 					</p>
-
-					<a class="link link_level_advanced card__link_size_small card__level" href="">
-						Продвинутый
+					<a class="link link_level_new" href="">
+						Новичок
 					</a>
 				</div>
-
 				<h2 class="title card__title">
-					<a class="link " href="">
-						Что такое Polygon (MATIC)?
+					<a class="link main-card__title-link" href="#">
+						Что такое BETH и как он работает?
 					</a>
 				</h2>
-
-				<a class="card__content card__content--matic">
-
+				<a class="link main-card__img-link" href="#">
+					<img class="main-card__img" src="https://picsum.photos/200/300" alt="Человек входит в метавселенную"
+						height="135">
 				</a>
 			</div>
 		</div>
