--- a/source/markup/profile.html
+++ b/source/markup/profile.html
@@ -26,6 +26,8 @@
 						class="visually-hidden"
 						id="user-image"
 						type="file"
+						name="user_image"
+						accept="image/png, image/jpeg"
 					>
 					<!--
 					Показываем, когда пользователь загрузил фото
