--- a/source/markup/glossary.html
+++ b/source/markup/glossary.html
@@ -46,6 +46,23 @@
 					<form class="glossary__form" action="" method="">
 						<input class="glossary__form-search" type="text" name="glossary_search" placeholder="Поиск по глоссарию"
 							required>
+						<a
+							class="glossary__form-reset"
+							href="/glossary"
+						>
+							<svg
+								class="glossary__form-reset-icon"
+								width="20"
+								height="20"
+								aria-hidden="true"
+								focusable="false"
+							>
+								<use href="assets/images/svg/sprite.svg#reset"></use>
+							</svg>
+							<span class="visually-hidden">
+								Сбросить фильтр
+							</span>
+						</a>
 					</form>
 					<button class="glossary__search-button">
 						<span class="visually-hidden">
