--- a/source/markup/glossary.html
+++ b/source/markup/glossary.html
@@ -57,7 +57,7 @@
 								aria-hidden="true"
 								focusable="false"
 							>
-								<use href="assets/images/svg/sprite.svg#reset"></use>
+								<use href="assets/images/svg/sprite.svg#close"></use>
 							</svg>
 							<span class="visually-hidden">
 								Сбросить фильтр
