Refix quiz-single

--- a/source/markup/quiz-single.html
+++ b/source/markup/quiz-single.html
@@ -75,7 +75,7 @@
 				<div class="quiz__progress-bar quiz__progress-full"></div>
 			</div>
 
-			<!-- block -->
+			<!-- block (начало цикла) -->
 			<div
 				class="quiz__block"
 				data-quiz-answer="no"
@@ -94,67 +94,7 @@
 					alt="Альтернативный текст"
 				>
 			</div>
-			<!-- /block -->
-
-			<!-- block -->
-			<div
-				class="quiz__block quiz__block_state_hidden"
-				data-quiz-answer="no"
-				data-quiz-answer-paragraph="lorem ipsum 1"
-			>
-				<h1 class="title">
-					Обновите сейчас же 2!
-				</h1>
-				<p class="quiz__paragraph">
-					Как удобно, Служба поддержки клиентов Binance отправила вам обновление для системы безопасности через Telegram.
-				</p>
-				<img
-					class="quiz__image"
-					src="http://placehold.jp/150x192.png"
-					alt="Альтернативный текст"
-				>
-			</div>
-			<!-- /block -->
-
-			<!-- block -->
-			<div
-				class="quiz__block quiz__block_state_hidden"
-				data-quiz-answer="yes"
-				data-quiz-answer-paragraph="lorem ipsum 4"
-			>
-				<h1 class="title">
-					Обновите сейчас же 3!
-				</h1>
-				<p class="quiz__paragraph">
-					Как удобно, Служба поддержки клиентов Binance отправила вам обновление для системы безопасности через Telegram.
-				</p>
-				<img
-					class="quiz__image"
-					src="http://placehold.jp/150x192.png"
-					alt="Альтернативный текст"
-				>
-			</div>
-			<!-- /block -->
-
-						<!-- block -->
-			<div
-				class="quiz__block quiz__block_state_hidden"
-				data-quiz-answer="yes"
-				data-quiz-answer-paragraph="lorem ipsum 2"
-			>
-				<h1 class="title">
-					Обновите сейчас же 4!
-				</h1>
-				<p class="quiz__paragraph">
-					Как удобно, Служба поддержки клиентов Binance отправила вам обновление для системы безопасности через Telegram.
-				</p>
-				<img
-					class="quiz__image"
-					src="http://placehold.jp/150x192.png"
-					alt="Альтернативный текст"
-				>
-			</div>
-			<!-- /block -->
+			<!-- /block (конец цикла) -->
 
 			<div class="quiz__buttons">
 				<button
