--- a/source/markup/profile.html
+++ b/source/markup/profile.html
@@ -9,7 +9,8 @@
 	<body class="page__body">
 		<form
 			class="profile container"
-			method=""
+			enctype="multipart/form-data"
+			method="post"
 			action=""
 		>
 			<div class="profile__background" aria-hidden="true"></div>
