--- a/source/markup/article.html
+++ b/source/markup/article.html
@@ -320,13 +320,17 @@
 					</button>
 				</div>
 
-				<button class="button_form_none content__button-svg" type="button">
-					<span class="visually-hidden">вернутся</span>
+				<button class="button_form_none content__button-reply content__button-svg" type="button">
+					<span class="visually-hidden">Скопировать ссылку</span>
 					<svg class="content__svg-return" width="21" height="17" aria-hidden="true" focusable="false">
 						<use href="assets/images/svg/sprite.svg#return"></use>
 					</svg>
 				</button>
 			</div>
+		</div>
+
+		<div class="content__success">
+			Ссылка успешно скопирована
 		</div>
 
 		<section class="discus content__discus">
