--- a/source/markup/education.html
+++ b/source/markup/education.html
@@ -445,26 +445,10 @@
 
 				<li class="footer__icon footer__icon_net_youtube">
 					<a class="footer__social-link" href="">
-						<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
-							<use href="assets/images/svg/sprite.svg#youtube"></use>
+						<svg class="social__icon" width="24" height="24" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#twitter"></use>
 						</svg>
 						<span class="acces">youtube</span>
-					</a>
-				</li>
-
-				<li class="footer__icon footer__icon_net_inst">
-					<a class="footer__social-link" href="">
-						<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
-							<use href="assets/images/svg/sprite.svg#inst"></use>
-						</svg>
-					</a>
-				</li>
-
-				<li class="footer__icon footer__icon_net_facebook">
-					<a class="footer__social-link" href="">
-						<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
-							<use href="assets/images/svg/sprite.svg#facebook"></use>
-						</svg>
 					</a>
 				</li>
 
@@ -476,19 +460,6 @@
 					</a>
 				</li>
 			</ul>
-
-			<div class="footer__load_media_desktop">
-				<a class="link footer__img-link" href="#">
-					<span class="visually-hidden">appstore</span>
-					<svg class="social__icon-play" width="113" height="30" aria-hidden="true" focusable="false">
-						<use href="assets/images/svg/sprite.svg#apple"></use>
-					</svg>
-				</a>
-
-				<a class="link footer__img-link" href="#">
-					<span class="visually-hidden">googleplay</span>
-					<img src="assets/images/svg/google-play.svg" width="119" height="29" aria-hidden="true" alt=""></a>
-			</div>
 		</div>
 
 		<div class="footer__list">
@@ -602,20 +573,6 @@
 			</ul>
 		</div>
 
-		<div class="footer__load">
-			<a class="link footer__img-link" href="#">
-				<span class="visually-hidden">appstore</span>
-				<svg class="social__icon-play" width="113" height="30" aria-hidden="true" focusable="false">
-					<use href="assets/images/svg/sprite.svg#apple"></use>
-				</svg>
-			</a>
-
-			<a class="link footer__img-link" href="#">
-				<span class="visually-hidden">googleplay</span>
-				<img src="assets/images/svg/google-play.svg" width="119" height="29" aria-hidden="true" alt="">
-			</a>
-		</div>
-
 		<ul class="menu footer__social">
 			<li class="footer__icon footer__icon_net_telegramm">
 				<a class="footer__social-link" href="">
@@ -629,26 +586,8 @@
 			<li class="footer__icon footer__icon_net_youtube">
 				<a class="footer__social-link" href="">
 					<span class="visually-hidden">youtube</span>
-					<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
-						<use href="assets/images/svg/sprite.svg#youtube"></use>
-					</svg>
-				</a>
-			</li>
-
-			<li class="footer__icon footer__icon_net_inst">
-				<a class="footer__social-link" href="">
-					<span class="visually-hidden">instagram</span>
-					<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
-						<use href="assets/images/svg/sprite.svg#inst"></use>
-					</svg>
-				</a>
-			</li>
-
-			<li class="footer__icon footer__icon_net_facebook">
-				<a class="footer__social-link" href="">
-					<span class="visually-hidden">facebook</span>
-					<svg class="social__icon" width="39" height="39" aria-hidden="true" focusable="false">
-						<use href="assets/images/svg/sprite.svg#facebook"></use>
+					<svg class="social__icon" width="24" height="24" aria-hidden="true" focusable="false">
+						<use href="assets/images/svg/sprite.svg#twitter"></use>
 					</svg>
 				</a>
 			</li>
