--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body class="page__body">
-	<section class="hero container">
-
+	<section class="hero">
+		<div class="hero__container container">
 			<h1 class="title title_size_large hero__title">
 				Узнавайте больше о блокчейне с Bithoven Wiki
 			</h1>
@@ -53,7 +53,7 @@
 					Vote (1548)
 				</span>
 			</div>
-
+		</div>
 	</section>
 
 	<section class="slider">
@@ -190,8 +190,7 @@
 
 			<div class="main-card last__grid-item">
 				<a class="link main-card__img-link main-card__img-link_order_top" href="#">
-					<img class="main-card__img" src="assets/images/main/last/porto-desktop.jpg"
-						alt="Логотип клуба порту">
+					<img class="main-card__img" src="assets/images/main/last/porto-desktop.jpg" alt="Логотип клуба порту">
 				</a>
 				<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top ">
 					<a class="button main-card__tag" href="#">
