--- a/source/markup/quiz-catalog.html
+++ b/source/markup/quiz-catalog.html
@@ -55,7 +55,7 @@
 				</h1>
 			</header>
 			<div class="quiz__content">
-				<h2 class="title title_size_extra-small">
+				<h2 class="quiz__content-title title title_size_extra-small">
 					Викторины
 				</h2>
 				<div class="quiz__grid">
