--- a/source/markup/auth.html
+++ b/source/markup/auth.html
@@ -48,7 +48,7 @@
 				</a>
 			</div>
 			<p class="paragraph auth__text">
-				У вас еще нет притокашелька?
+				У вас еще нет криптокошелька?
 			</p>
 			<a class="button auth__button">
 				Как подключить
