--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -142,7 +142,7 @@
 
 				<div class="filter__level-inner">
 					<fieldset class="fieldset filter__level">
-						<legend class="text">
+						<legend class="fieldset__caption text">
 							Уровень
 						</legend>
 						<div class="filter__level-wrap">
@@ -167,7 +167,7 @@
 					</fieldset>
 
 					<fieldset class="fieldset">
-						<legend class="text">
+						<legend class="fieldset__caption text">
 							Время прочтения
 						</legend>
 						<div class="filter__time">
