--- a/source/markup/article.html
+++ b/source/markup/article.html
@@ -14,6 +14,7 @@
 
 	<section class="content">
 		<div class="content__wrap container">
+			<div class="content__column">
 			<div class="content__box">
 				<a class="back" href="/">
 					<svg class="back__icon" width="7" height="10" aria-hidden="true" focusable="false">
@@ -67,48 +68,6 @@
 					</a>
 				</div>
 			</div>
-
-			<nav class="content__nav">
-				<button class="button_form_none  content__nav-button" type="button">
-					Содержание
-				</button>
-
-				<ul class="menu content__menu">
-					<li class="content__item">
-						<a class="link content__link" href="#">
-							Введение
-						</a>
-					</li>
-					<div class="line content__line">
-					</div>
-					<li class="content__item">
-						<a class="link content__link" href="#">
-							Что такое фан- токены Binance?
-						</a>
-					</li>
-					<div class="line content__line">
-					</div>
-					<li class="content__item">
-						<a class="link content__link" href="#">
-							Что такое фан-токен ФК «Порту» (PORTO) и как он работает?
-						</a>
-					</li>
-					<div class="line content__line">
-					</div>
-					<li class="content__item">
-						<a class="link content__link" href="#">
-							Резюме
-						</a>
-					</li>
-					<div class="line content__line">
-					</div>
-					<li class="content__item">
-						<a class="link content__link" href="#">
-							Как купить PORTO на Binance?
-						</a>
-					</li>
-				</ul>
-			</nav>
 
 			<div class="content__text content__text_size_big">
 				<p class="text">
@@ -286,9 +245,48 @@
 				</div>
 			</div>
 
-			<div class="content__social">
-				<div class="content__social-wrap">
+			</div>
+						<nav class="content__nav">
+				<button class="button_form_none  content__nav-button" type="button">
+					Содержание
+				</button>
 
+				<ul class="menu content__menu">
+					<li class="content__item">
+						<a class="link content__link" href="#">
+							Введение
+						</a>
+					</li>
+					<div class="line content__line">
+					</div>
+					<li class="content__item">
+						<a class="link content__link" href="#">
+							Что такое фан- токены Binance?
+						</a>
+					</li>
+					<div class="line content__line">
+					</div>
+					<li class="content__item">
+						<a class="link content__link" href="#">
+							Что такое фан-токен ФК «Порту» (PORTO) и как он работает?
+						</a>
+					</li>
+					<div class="line content__line">
+					</div>
+					<li class="content__item">
+						<a class="link content__link" href="#">
+							Резюме
+						</a>
+					</li>
+					<div class="line content__line">
+					</div>
+					<li class="content__item">
+						<a class="link content__link" href="#">
+							Как купить PORTO на Binance?
+						</a>
+					</li>
+				</ul>
+							<div class="content__social content__social-wrap">
 					<button class="button_form_none content__button-svg" type="button">
 						<span class="visually-hidden">оценить</span>
 						<svg class="content__svg-laik" width="24" height="24" aria-hidden="true" focusable="false">
@@ -318,15 +316,15 @@
 							1
 						</span>
 					</button>
-				</div>
 
-				<button class="button_form_none content__button-reply content__button-svg" type="button">
+					<button class="button_form_none content__button-reply content__button-svg" type="button">
 					<span class="visually-hidden">Скопировать ссылку</span>
 					<svg class="content__svg-return" width="21" height="17" aria-hidden="true" focusable="false">
 						<use href="assets/images/svg/sprite.svg#return"></use>
 					</svg>
 				</button>
 			</div>
+			</nav>
 		</div>
 
 		<div class="content__success">
